--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Deploy
+    name: Build
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -15,7 +15,7 @@ jobs:
         uses: Swatinem/rust-cache@v1
 
       - name: Build (Debug)
-        run: carbo build
+        run: cargo build
 
       - name: Build (Release)
-        run: carbo build -r
+        run: cargo build -r
