--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/cli_delta.rs"
 [dependencies]
 # general
 walkdir = "2"
+serde = { version = "1.0.142", features = ["derive"] }
 serde_json = "1.0.83"
 # cli/config
 clap = { version = "3.2.16", features = ["derive"] }
@@ -27,9 +28,7 @@ bsdiff = "0.1.6"
 xz2 = "0.1.7"
 # hashing
 blake2 = "0.10.4"
-# codesigning
-ring = "0.16.20"
 # parallel processing
 rayon = "1.5.3"
 indicatif = { version = "0.17.0", features = ["rayon"] }
-hashbrown = { version = "0.12", features = ["rayon"] }
+hashbrown = { version = "0.12", features = ["rayon", "serde"] }
