Implement RSA signing (manifest, updater, etc.)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,10 @@ toml = "0.5.9"
 # delta patching
 bsdiff = "0.1.6"
 xz2 = "0.1.7"
+# singing
+base64 = "0.13.0"
 rsa = { version = "0.6.1", features = ["pem"] }
+sha2 = "0.10.2"
 # hashing
 blake2 = "0.10.4"
 # parallel processing
