--- a/.github/workflows/full_test.yaml
+++ b/.github/workflows/full_test.yaml
@@ -13,11 +13,14 @@ jobs:
         with:
           lfs: true
 
+      - name: Update rust toolchain
+        run: rustup toolchain install stable --profile minimal
+
+      - name: Restore Rust Cache
+        uses: Swatinem/rust-cache@v2
+
       - name: Install pandoc
         run: choco install pandoc
-
-      - name: Build (Release)
-        run: cargo build -r
 
       - name: Download and Extract build
         run: |
@@ -25,6 +28,9 @@ jobs:
           mkdir test\out
           wget https://github.com/obsproject/obs-studio/releases/download/28.0.0-beta1/OBS-Studio-28.0-beta1-Full-x64.zip -O new.zip
           7z x new.zip -otest/new
+
+      - name: Build (Release)
+        run: cargo build -r
 
       - name: Create self-signed cert
         run: New-SelfSignedCertificate -DnsName "OBS Test" -Type CodeSigning -KeyAlgorithm ECDSA_nistP256 -CertStoreLocation "Cert:\CurrentUser\My"
