CI: Add filename pattern for artifact upload

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: bouf_build
-          path: target/release
+          path: target/release/bouf*
 
   build:
     name: Run tests
