--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.bmp filter=lfs diff=lfs merge=lfs -text
 *.dll filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
+*.txt eol=lf
