--- a/.github/workflows/full_test.yaml
+++ b/.github/workflows/full_test.yaml
@@ -32,8 +32,8 @@ jobs:
           mkdir test\old
           Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/28.0.0-beta1/OBS-Studio-28.0-beta1-Full-x64.zip" -OutFile "old.zip"
           Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/28.0.0-beta2/OBS-Studio-28.0-beta2-Full-x64.zip" -OutFile "new.zip"
-          7z x new.zip -otest/new
-          7z x old.zip -otest/old/28.0.0-beta1
+          7z x new.zip -o"test/new"
+          7z x old.zip -o"test/old/28.0.0-beta1"
 
       - name: Build (Release)
         run: cargo build -r
