--- a/extra/ci/config.toml
+++ b/extra/ci/config.toml
@@ -61,6 +61,6 @@ name = "OBS-Studio-{version}.zip"
 pdb_name = "OBS-Studio-{version}-pdbs.zip"
 
 [package.updater]
-private_key = "extra/ci/privatekey.pem"
+private_key = "extra/test_files/privatekey.pem"
 vc_redist_path = "extra/nsis/VC_redist.x64.exe"
 notes_files = "extra/ci/notes_placeholder.rst"
