CI: Generate patch for only one build to avoid running out of memory
This should be doable on CI by disabling parallelism for CEF binaries.

--- a/.github/workflows/full_test.yaml
+++ b/.github/workflows/full_test.yaml
@@ -31,10 +31,10 @@ jobs:
           mkdir test\out
           mkdir test\old
           Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/27.2.4/OBS-Studio-27.2.4-Full-x64.zip" -OutFile "older.zip"
-          Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/28.0.0-beta1/OBS-Studio-28.0-beta1-Full-x64.zip" -OutFile "old.zip"
+          # Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/28.0.0-beta1/OBS-Studio-28.0-beta1-Full-x64.zip" -OutFile "old.zip"
           Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/28.0.0-beta2/OBS-Studio-28.0-beta2-Full-x64.zip" -OutFile "new.zip"
           7z x new.zip -o"test/new"
-          7z x old.zip -o"test/old/28.0.0-beta1"
+          # 7z x old.zip -o"test/old/28.0.0-beta1"
           7z x older.zip -o"test/old/27.2.4"
 
       - name: Build (Release)
