--- a/.github/workflows/full_test.yaml
+++ b/.github/workflows/full_test.yaml
@@ -30,12 +30,14 @@ jobs:
           mkdir test\new
           mkdir test\out
           mkdir test\old
+          Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/27.1.3/OBS-Studio-27.1.3-Full-x64.zip" -OutFile "oldest.zip"
           Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/27.2.4/OBS-Studio-27.2.4-Full-x64.zip" -OutFile "older.zip"
-          # Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/28.0.0-beta1/OBS-Studio-28.0-beta1-Full-x64.zip" -OutFile "old.zip"
+          Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/28.0.0-beta1/OBS-Studio-28.0-beta1-Full-x64.zip" -OutFile "old.zip"
           Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/28.0.0-beta2/OBS-Studio-28.0-beta2-Full-x64.zip" -OutFile "new.zip"
           7z x new.zip -o"test/new"
-          # 7z x old.zip -o"test/old/28.0.0-beta1"
+          7z x old.zip -o"test/old/28.0.0-beta1"
           7z x older.zip -o"test/old/27.2.4"
+          7z x oldest.zip -o"test/old/27.1.3"
 
       - name: Build (Release)
         run: cargo build -r
