CI: Include os in artifact name

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Upload results
         uses: actions/upload-artifact@v3
         with:
-          name: bouf_build
+          name: bouf-build-${{ matrix.os }}
           path: target/release/bouf*
 
   build:
