--- a/extra/config.example.toml
+++ b/extra/config.example.toml
@@ -18,6 +18,7 @@ pdbcopy_path = "C:/Program Files (x86)/Windows Kits/10/Debuggers/x64/pdbcopy.exe
 
 [prepare.copy]
 # This system is 64-bit only, so ignore 32 bit build files
+# Note that all these filters are case-sensitive!
 excludes = [
     "bin/32bit",
     "obs-plugins/32bit",
