--- a/extra/config.example.toml
+++ b/extra/config.example.toml
@@ -1,6 +1,6 @@
 [env]
-# Branch should be set via command line for correct output dir
-# branch = "stable"
+# Branch can be set via command line as well, empty will genreate backwards-compatible update structure
+branch = ""
 # Directories for building (can be overriden via command line)
 input_dir = "C:/Path/to/build"
 output_dir = "C:/Path/to/output"
@@ -11,7 +11,6 @@ makensis_path = "C:/Path/to/makensis.exe"
 pandoc_path = "C:/path/to/pandoc.exe"
 pdbcopy_path = "C:/Program Files (x86)/Windows Kits/10/Debuggers/x64/pdbcopy.exe"
 # signtool is found automatically
-# signtool = "C:/Path/to/signtool.exe"
 
 ## Preparation steps
 [prepare]
@@ -68,6 +67,9 @@ removed_files = [
     "obs-plugins/64bit/decklink-ouput-ui.dll"
 ]
 
+# not implemented yet
+# skip_for_prerelease = true
+
 # Packages are processed in the specified order.
 # A package without include filters will be assigned any remaining files
 [[generate.packages]]
@@ -106,20 +108,23 @@ name = "core"
 
 [package.installer]
 nsis_script = "C:/Path/to/installer.nsi"
-# Note: {version} will be <Major>.<Minor>[.<Patch>] and suffixied with "-rc<Num>" or "-beta<Num>" if provided
-name = "OBS-Studio-{version}.exe"
+# not implemented yet (requires NSIS script updates)
+# name = "OBS-Studio-{version}.exe"
 skip_sign = false
 
 [package.zip]
+# Note: {version} will be <Major>.<Minor>[.<Patch>] and suffixied with "-rc<Num>" or "-beta<Num>" if provided
 name = "OBS-Studio-{version}.zip"
 pdb_name = "OBS-Studio-{version}-pdbs.zip"
-skip_for_prerelease = true
+# Skip PDB generation for pre-release
+skip_pdbs_for_prerelease = true
 
 [package.updater]
 skip_sign = true
-private_key = "C:/Path/to/privkey.pem"
 # alternatively, the key may be specified as base64 encoded PEM/DER in an environment variables (UPDATER_PRIVATE_KEY)
-updater_path = "C:/Path/to/updater.exe"
+private_key = "C:/Path/to/privkey.pem"
+# not implemented yet (use bouf-sign to sign updater.exe separately if required)
+# updater_path = "C:/Path/to/updater.exe"
 vc_redist_path = "C:/path/to/vcredist"
 
 [post]
