--- a/extra/config.example.toml
+++ b/extra/config.example.toml
@@ -14,6 +14,7 @@ pdbcopy_path = "C:/Program Files (x86)/Windows Kits/10/Debuggers/x64/pdbcopy.exe
 
 ## Preparation steps
 [prepare]
+empty_output_dir = false
 
 [prepare.copy]
 # This system is 64-bit only, so ignore 32 bit build files
