--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/sign.rs"
 
 [dependencies]
 # general
+anyhow = "1.0.62"
 walkdir = "2"
 serde = { version = "1.0.142", features = ["derive"] }
 serde_json = "1.0.83"
