--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ serde_json = "1.0.83"
 clap = { version = "3.2.16", features = ["derive"] }
 toml = "0.5.9"
 # delta patching
+bidiff = "1.0.0"
+bipatch = "1.0.0"
 bsdiff = "0.1.6"
 xz2 = "0.1.7"
 # singing
