--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ serde_json = "1.0.83"
 clap = { version = "3.2.16", features = ["derive"] }
 toml = "0.5.9"
 # delta patching
-bsdiff = "0.1.6"
+bsdiff = { git = "https://github.com/jp9000/bsdiff-rs", branch = "tail-end-optimization" }
 xz2 = "0.1.7"
 # singing
 base64 = "0.13.0"
