CI: Fix Clippy workflow permissions

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -12,7 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      actions: read
       security-events: write
+      statuses: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
