--- a/extra/ci/config.toml
+++ b/extra/ci/config.toml
@@ -67,4 +67,4 @@ pdb_name = "OBS-Studio-{version}-pdbs.zip"
 [package.updater]
 private_key = "extra/test_files/privatekey.pem"
 vc_redist_path = "extra/nsis/VC_redist.x64.exe"
-notes_files = "extra/ci/notes_placeholder.rst"
+notes_file = "extra/ci/notes_placeholder.rst"
