config/prepare: Add option to skip PDB stripping for pre-releases

--- a/extra/config.example.toml
+++ b/extra/config.example.toml
@@ -56,6 +56,8 @@ exclude = [
     "obs64.pdb",
     "obs.pdb",
 ]
+# Do not strip PDBs for pre-release builds
+skip_for_prerelease = true
 
 ## Delta patch generation
 [generate]
