--- a/.github/workflows/full_test.yaml
+++ b/.github/workflows/full_test.yaml
@@ -27,21 +27,21 @@ jobs:
         run: |
           mkdir test\new
           mkdir test\out
-          mkdir test\old
-          Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/27.1.3/OBS-Studio-27.1.3-Full-x64.zip" -OutFile "oldest.zip"
-          Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/27.2.4/OBS-Studio-27.2.4-Full-x64.zip" -OutFile "older.zip"
-          Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/28.0.0/OBS-Studio-28.0-Full-x64.zip" -OutFile "old.zip"
-          Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/28.0.1/OBS-Studio-28.0.1-Full-x64.zip" -OutFile "new.zip"
+          mkdir test\old\builds
+          Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/27.2.4/OBS-Studio-27.2.4-Full-x64.zip" -OutFile "oldest.zip"
+          Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/28.0.3/OBS-Studio-28.0.3-Full-x64.zip" -OutFile "older.zip"
+          Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/28.1.1/OBS-Studio-28.1.1-Full-x64.zip" -OutFile "old.zip"
+          Invoke-WebRequest -Uri "https://github.com/obsproject/obs-studio/releases/download/28.1.2/OBS-Studio-28.1.2-Full-x64.zip" -OutFile "new.zip"
           7z x new.zip -o"test/new"
-          7z x old.zip -o"test/old/28.0.0"
-          7z x older.zip -o"test/old/27.2.4"
-          7z x oldest.zip -o"test/old/27.1.3"
+          7z x old.zip -o"test/old/builds/28.1.1"
+          7z x older.zip -o"test/old/builds/28.0.3"
+          7z x oldest.zip -o"test/old/builds/27.2.4"
 
       - name: Build (Release)
         run: cargo build -r
 
       - name: Run bouf
-        run: target/release/bouf --config extra/ci/config.toml --version 28.0.1 -i test/new -p test/old -o test/out --clear-output
+        run: target/release/bouf --config extra/ci/config.toml --version 28.1.2 -i test/new -p test/old -o test/out --clear-output
 
       - name: Upload results
         uses: actions/upload-artifact@v3
