--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ toml = "0.7.0"
 bsdiff = { git = "https://github.com/space-wizards/bsdiff-rs", rev = "a77199a6dd31d90555b4efd2c57d91d3aa3b69e5" }
 xz2 = "0.1.7"
 zstd = "0.12.2"
+object = { version = "0.30.3", features = ["read"] }
 # singing
 base64 = "0.13.0"
 rsa = { version = "0.8", features = ["sha2"] }
