--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bouf"
-version = "0.4.4"
-authors = ["Dennis <dennis@obsproject.com>"]
+version = "0.5.0"
+authors = ["Dennis Sädtler <dennis@obsproject.com>"]
 edition = "2021"
 autobins = false
 
