--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ anyhow = "1.0.62"
 walkdir = "2"
 serde = { version = "1.0.142", features = ["derive"] }
 serde_json = "1.0.83"
+# logging
+log = "0.4.0"
+env_logger = "0.10.0"
 # cli/config
 clap = { version = "4.1", features = ["derive", "wrap_help"] }
 toml = "0.7.0"
